fix/fix-contentOverlaping

--- a/styles/EearthGalaxy.module.css
+++ b/styles/EearthGalaxy.module.css
@@ -4,7 +4,7 @@
     animation-iteration-count: 1;
     animation-fill-mode: forwards;
       position: absolute;
-      top: 50%;
+      top: 55%;
       left: 50%;
       margin-right: -50%;
       transform: translate(-50%, -50%);
